--- a/requirements.yml
+++ b/requirements.yml
@@ -14,5 +14,7 @@ collections:
     version: ">=6.0.0"
   - name: containers.podman
     version: ">=1.16.0"
-
+  - name: community.aws
+    version: ">=9.2.0"
+    
 ...
